[package]
name = "kernel"
version = "0.1.0"
authors = ["Alister Lee <alister@dev.shortepic.com>"]
edition = "2018"

[lib]
name = "libkernel"
# NOTE: exclude cargo test --lib from cargo test --tests; see make test
test = false

[[bin]]
name = "kernel"
test = false

[dependencies]
test-types = { path = "test-types" }
qemu-exit = "1.0.0"
spin = "0.5.2"
register = "0.5.1"
enum-map = "0.6.2"
claim = "0.3.1"
linked_list_allocator = "0.8.4"

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "5.1.0"
dtb = "0.2.0"

[profile.dev]
opt-level = 1
panic = 'abort'

[dev-dependencies]
test-macros = { path = "test-macros" }

[profile.release]
opt-level = 3
panic = 'abort'
