[package]
name = "kernel"
version = "0.1.0"
authors = ["Alister Lee <alister@dev.shortepic.com>"]
edition = "2018"

[lib]
name = "libkernel"
# NOTE: exclude cargo test --lib from cargo test --tests; see make test
test = false

[[bin]]
name = "kernel"
test = false

[dependencies]
test-types = { path = "test-types" }
qemu-exit = "2.0.1"
spin = "0.9.2"
enum-map = "1.1.1"
claim = "0.5"
linked_list_allocator = "0.9.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
tock-registers = { version = "0.7.x" }
cortex-a = "6.1.0"
dtb = "0.2.0"

[profile.dev]
opt-level = 1
panic = 'abort'

[dev-dependencies]
test-macros = { path = "test-macros" }

[profile.release]
opt-level = 3
panic = 'abort'
