[package]
name = "kernel"
version = "0.1.0"
authors = ["Alister Lee <alister@dev.shortepic.com>"]
edition = "2018"

[dependencies]
log = { version = "0.4.8", default-features = false }
cortex-a = { path = "../../cortex-a" }
register = "0.5.0"
dtb = "0.2.0"
spin = "0.5.2"
linked_list_allocator = "0.6.6"
